force-app/main/default/objects/FieloPLT__MissionMember__c/FieloPLT__MissionMember__c.object-meta.xml
<CustomObject>
    <description>It relates a Member subscribed to a Challenge with a particular Mission. It stores the corresponding values from the applicable Mission actions performed by Members.</description>
    <label>Mission Member</label>
    <nameField>
        <displayFormat>MM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missions Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>