force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__AlternativeKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__AlternativeKey__c</fullName>
    <description>Key which includes the Challenge Mission ID and Member ID.</description>
    <inlineHelpText>Key which includes the Challenge Mission ID and Member ID.</inlineHelpText>
    <label>Alternative Key</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>