force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Average__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Average__c</fullName>
    <description>It stores the average number of the Target Object established in a Mission.</description>
    <formula>IF( !ISNULL(FieloPLT__Summary__c) &amp;&amp; !ISNULL(FieloPLT__Counter__c) &amp;&amp; FieloPLT__Counter__c != 0 , FieloPLT__Summary__c / FieloPLT__Counter__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average number of the Target Object established in a Mission.</inlineHelpText>
    <label>Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>