force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__ChallengeMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeMember__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Challenge Member from the Challenge a Mission belongs to.</description>
    <inlineHelpText>Challenge Member from the Challenge a Mission belongs to.</inlineHelpText>
    <label>Challenge Member</label>
    <referenceTo>FieloPLT__ChallengeMember__c</referenceTo>
    <relationshipLabel>Missions Members</relationshipLabel>
    <relationshipName>MissionsMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>