force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Counter__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Counter__c</fullName>
    <description>It stores the number of records generated for the Target Object established in a Mission.</description>
    <inlineHelpText>Number of records generated for the Target Object established in a Mission.</inlineHelpText>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>