force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Last__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Last__c</fullName>
    <label>Last</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>