force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__LeaderboardPosition__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LeaderboardPosition__c</fullName>
    <description>It stores Mission Member ranking position based on the Leaderboard Value in descending order.</description>
    <inlineHelpText>It stores Mission Member ranking position based on the Leaderboard Value in descending order.</inlineHelpText>
    <label>Leaderboard Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>