force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__LeaderboardValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LeaderboardValue__c</fullName>
    <description>It stores the progress percentage of a Member who participates in a Mission (Mission Member). Leaderboard Value depends on Mission Type, Objective Type and Objective Value/Field (if applicable).</description>
    <inlineHelpText>It stores the progress percentage of a Member who participates in a Mission (Mission Member). Leaderboard Value depends on Mission Type, Objective Type and Objective Value/Field (if applicable).</inlineHelpText>
    <label>Leaderboard Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>