force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__MaxValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MaxValue__c</fullName>
    <description>It stores the maximum value of Missions whose Objective Type is &quot;Max. Value&quot;.</description>
    <inlineHelpText>It stores the maximum value of Missions whose Objective Type is &quot;Max. Value&quot;.</inlineHelpText>
    <label>Max.Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>