force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mission__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mission</label>
    <referenceTo>FieloPLT__Mission__c</referenceTo>
    <relationshipLabel>Missions Members</relationshipLabel>
    <relationshipName>ChallengeMissionsMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>