force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__RewardingStatus__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardingStatus__c</fullName>
    <label>Rewarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>No Reward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>