force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Mission Member status when reaching the objective. It is only applied for Challenges which include Missions with Objective. Mission Member can have status &quot;Accomplished&quot; (objective was met)  or &quot;Not accomplished&quot; (objective was not met).</description>
    <inlineHelpText>Choose the Mission Member status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accomplished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>