force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__Summary__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Summary__c</fullName>
    <label>Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>