force-app/main/default/objects/FieloPLT__MissionMember__c/fields/FieloPLT__ToBePositioned__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ToBePositioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Positioned</label>
    <type>Checkbox</type>
</CustomField>